--- a/build_tools/packaging/linux/template/debian_install.j2
+++ b/build_tools/packaging/linux/template/debian_install.j2
@@ -1,4 +1,6 @@
+{%- if has_regular_files %}
 .{{path}}/*  {{path}}
-{% if has_hidden_dir %}
+{%- endif %}
+{%- if has_hidden_files %}
 .{{path}}/.[!.]*  {{path}}
-{% endif %}
+{%- endif %}
